Preserve Nextcloud path when returning dav data

The URL path was getting stripped post authentication. This caused all post authentication requests to fail.

BUG: 438084
(cherry picked from commit c0953e857c40259f839b81ced5122d26090947bb)